[package]
name = "perf_gate_ttfb"
version = "0.1.0"
authors = ["Abderrahmane SMIMITE"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
futures = "0.3.25"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
noisy_float = "0.2.0"
polars = { version = "0.26.1", features = ["lazy", "csv-file", "rank", "describe"] }
reqwest = { version = "0.11.13", features = ["blocking"] }
tokio = { version = "1.23.0", features = ["full"] }
